--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   
 <div class="container mt-5">
   <div id="exampleAcf"></div>
-  <div id="acfJson"></div>
+  <div class="row mt-3">
+    <div id="acfJson" class="col-sm-12" style="word-wrap: break-word;"></div>
+  </div>
   <div style="margin-bottom: 30px;"></div>
 </div>
 
